Fix eigenvector slicing in notebook to match MATLAB
The notebook was using eigenvectors[:, 1:dim+1] which skips the first
eigenvector, but MATLAB's Y(:,(1:Dim)) includes the first Dim columns
starting from column 1 (1-indexed). In Python (0-indexed), this should
be eigenvectors[:, 0:dim] to include ALL eigenvectors from the start.

--- a/examples/matlab_experiments_validation.ipynb
+++ b/examples/matlab_experiments_validation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +76,9 @@
     "    A : ndarray of shape (n_samples, n_samples)\n",
     "        Affinity matrix.\n",
     "    \"\"\"\n",
-    "    n = X.shape[0]\n",
-    "    A = np.zeros((n, n))\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            A[i, j] = np.exp(-np.linalg.norm(X[i] - X[j])**2 / sigma2)\n",
-    "    \n",
+    "    from scipy.spatial.distance import cdist\n",
+    "    dist_sq = cdist(X, X, metric='sqeuclidean')\n",
+    "    A = np.exp(-dist_sq / sigma2)\n",
     "    return A\n",
     "\n",
     "def affinity_to_normalized_laplacian(A):\n",
@@ -117,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +288,8 @@
     "    \n",
     "    # Start with Dim=2\n",
     "    for dim in range(2, max_dim + 1):\n",
-    "        # Extract first dim eigenvectors (skip first trivial one)\n",
-    "        PcEig = eigenvectors[:, 1:dim+1]\n",
+    "        # Extract first dim eigenvectors (MATLAB: Y(:,(1:Dim)) includes ALL from column 1)\n",
+    "        PcEig = eigenvectors[:, 0:dim]\n",
     "        \n",
     "        # Run elongated k-means with origin detector\n",
     "        k = dim - 1  # Number of non-origin clusters\n",
@@ -307,7 +303,7 @@
     "            return final_labels, dim, PcEig, centers[:k]\n",
     "    \n",
     "    # If we reach here, use max_dim\n",
-    "    PcEig = eigenvectors[:, 1:max_dim+1]\n",
+    "    PcEig = eigenvectors[:, 0:max_dim]\n",
     "    final_labels = detector._elongated_kmeans(PcEig, max_dim - 1)\n",
     "    return final_labels, max_dim, PcEig, None\n",
     "\n",
@@ -322,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
