Fix attribute name: use centers_ instead of cluster_centers_

--- a/examples/matlab_validation_clean.ipynb
+++ b/examples/matlab_validation_clean.ipynb
@@ -158,7 +158,7 @@
     "# Eigenspace (first 2 eigenvectors)\n",
     "axes[2].scatter(clf_circles.eigenvectors_[:, 0], clf_circles.eigenvectors_[:, 1], \n",
     "                c=clf_circles.labels_, cmap='tab10', s=20)\n",
-    "axes[2].scatter(clf_circles.cluster_centers_[:, 0], clf_circles.cluster_centers_[:, 1],\n",
+    "axes[2].scatter(clf_circles.centers_[:, 0], clf_circles.centers_[:, 1],\n",
     "                c='black', marker='D', s=100, edgecolors='white', linewidths=2, label='Centers')\n",
     "axes[2].set_xlabel('Eigenvector 1')\n",
     "axes[2].set_ylabel('Eigenvector 2')\n",
