--- a/examples/bipartite_community_detection.ipynb
+++ b/examples/bipartite_community_detection.ipynb
@@ -367,11 +367,18 @@
     "- `SpectralCluster`: Gaussian affinity on point clouds\n",
     "- `CommunityDetector`: Transition matrix on bipartite networks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
