--- a/examples/matlab_validation_clean.ipynb
+++ b/examples/matlab_validation_clean.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# MATLAB Spectral Clustering Validation\n",
     "\n",
+    "## Neil D. Lawrence\n",
+    "\n",
+    "## 2026-02-09\n",
+    "\n",
     "This notebook validates the `fitkit.community.SpectralCluster` implementation against the original MATLAB reference code from Sanguinetti, Laidler & Lawrence (2005).\n",
     "\n",
     "## Reference\n",
@@ -295,11 +299,18 @@
     "      else \"✗ Some tests failed\")\n",
     "print(\"=\"*60 + \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
