--- a/examples/nested_matrix_fitness_complexity.ipynb
+++ b/examples/nested_matrix_fitness_complexity.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nested Matrix: Fitness / Complexity Analysis\n",
+    "# Nested Matrix: Fitness / Complexity Analysis\n",
+    "\n",
+    "## Neil D. Lawrence\n",
+    "\n",
+    "## 2026-02-08\n",
     "\n",
     "This notebook demonstrates fitness-complexity analysis on a **perfectly nested binary matrix**.\n",
     "\n",
@@ -729,7 +733,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
