--- a/examples/spectral_entropic_scenarios.ipynb
+++ b/examples/spectral_entropic_scenarios.ipynb
@@ -59,8 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_nested_network(n_countries=60, n_products=80, noise=0.05, seed=42):\n",
-    "    \"\"\"Generate perfectly nested network with noise.\"\"\"\n",
+    "def generate_nested_network(n_countries=60, n_products=80, noise=0.02, seed=42):\n",
+    "    \"\"\"Generate strongly nested network (minimal noise for single community).\"\"\"\n",
     "    np.random.seed(seed)\n",
     "    capability = np.sort(np.random.uniform(0, 1, n_countries))\n",
     "    complexity = np.sort(np.random.uniform(0, 1, n_products))\n",
@@ -69,19 +69,21 @@
     "    for c in range(n_countries):\n",
     "        for p in range(n_products):\n",
     "            if capability[c] >= complexity[p]:\n",
-    "                # Within capability: high probability\n",
+    "                # Within capability: very high probability (98%)\n",
     "                if np.random.random() > noise:\n",
     "                    M[c, p] = 1\n",
     "            else:\n",
-    "                # Beyond capability: low probability\n",
+    "                # Beyond capability: very low probability (2%)\n",
     "                if np.random.random() < noise:\n",
     "                    M[c, p] = 1\n",
     "    \n",
     "    return M\n",
     "\n",
-    "M1 = generate_nested_network()\n",
+    "# Generate with minimal noise to ensure single nested hierarchy\n",
+    "M1 = generate_nested_network(n_countries=70, n_products=90, noise=0.01, seed=42)\n",
     "print(f\"Scenario 1: Highly Nested\")\n",
-    "print(f\"Shape: {M1.shape}, Density: {M1.sum()/M1.size:.2%}\")"
+    "print(f\"Shape: {M1.shape}, Density: {M1.sum()/M1.size:.2%}\")\n",
+    "print(f\"Note: Using noise=0.01 (1%) to ensure strong nested structure\")"
    ]
   },
   {
@@ -469,7 +471,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -483,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
