Fix CIP numbering: CIP-0010 → CIP-000A (hexadecimal)
CIPs use hexadecimal numbering system (0001-FFFF).
Decimal 10 = Hexadecimal A.

Changes:
- Renamed cip0010_investigate-r-reflections.md → cip000A_investigate-r-reflections.md
- Updated id: "0010" → id: "000A"
- Updated title: CIP-0010 → CIP-000A
- Updated all references in CIP-0009 to use CIP-000A

--- a/examples/spectral_entropic_scenarios.ipynb
+++ b/examples/spectral_entropic_scenarios.ipynb
@@ -272,14 +272,36 @@
     "    M_sp = sparse.csr_matrix(M)\n",
     "    T = D_c_inv @ M_sp @ D_p_inv @ M_sp.T\n",
     "    \n",
-    "    # Compute eigenvalues\n",
+    "    # Compute eigenvalues (Laplacian form for proper eigengap diagnostic)\n",
     "    from scipy.sparse.linalg import eigsh\n",
     "    try:\n",
-    "        eigvals, _ = eigsh(T, k=min(10, n_countries-2), which='LA')\n",
-    "        eigvals = np.sort(eigvals)[::-1]\n",
-    "        spectral_gap = (eigvals[1] - eigvals[2]) / eigvals[1] if len(eigvals) > 2 else np.nan\n",
+    "        # Get largest eigenvalues of T (transition matrix)\n",
+    "        eigvals_T, _ = eigsh(T, k=min(10, n_countries-2), which='LA')\n",
+    "        eigvals_T = np.sort(eigvals_T)[::-1]  # Descending order\n",
+    "        \n",
+    "        # Convert to Laplacian eigenvalues: λ^L = 1 - λ^T\n",
+    "        eigvals_L = 1.0 - eigvals_T\n",
+    "        \n",
+    "        # Eigengap diagnostic from paper (line 480):\n",
+    "        # \"λ₃^L is substantially larger than λ₂^L\" → 1D nested hierarchy\n",
+    "        # Compute ratio λ₃^L / λ₂^L\n",
+    "        if len(eigvals_L) > 2:\n",
+    "            lambda_2_L = eigvals_L[1]  # Second smallest (skip trivial λ₁=0)\n",
+    "            lambda_3_L = eigvals_L[2]  # Third smallest\n",
+    "            eigengap_ratio = lambda_3_L / (lambda_2_L + 1e-10)  # Ratio > 1 means gap\n",
+    "            spectral_gap_rel = (eigvals_T[1] - eigvals_T[2]) / eigvals_T[1]  # Old metric for reference\n",
+    "        else:\n",
+    "            eigengap_ratio = np.nan\n",
+    "            spectral_gap_rel = np.nan\n",
+    "            lambda_2_L = np.nan\n",
+    "            lambda_3_L = np.nan\n",
     "    except:\n",
-    "        spectral_gap = np.nan\n",
+    "        eigvals_T = np.array([])\n",
+    "        eigvals_L = np.array([])\n",
+    "        eigengap_ratio = np.nan\n",
+    "        spectral_gap_rel = np.nan\n",
+    "        lambda_2_L = np.nan\n",
+    "        lambda_3_L = np.nan\n",
     "    \n",
     "    # 5. Correlation\n",
     "    valid = ~np.isnan(eci)\n",
@@ -296,9 +318,20 @@
     "    print(f\"  Community sizes: {np.bincount(detector.labels_)}\")\n",
     "    print(f\"  Eigenvectors used: {detector.eigenvectors_.shape[1]}\")\n",
     "    \n",
-    "    print(f\"\\nSpectral Analysis:\")\n",
-    "    print(f\"  Spectral gap (λ2-λ3)/λ2: {spectral_gap:.4f}\" if not np.isnan(spectral_gap) else \"  Spectral gap: N/A\")\n",
-    "    print(f\"  Top 3 eigenvalues: {eigvals[:3] if len(eigvals) >= 3 else eigvals}\")\n",
+    "    print(f\"\\nSpectral Analysis (Eigengap Diagnostic):\")\n",
+    "    if not np.isnan(eigengap_ratio):\n",
+    "        print(f\"  lambda_2^L = {lambda_2_L:.6f}\")\n",
+    "        print(f\"  lambda_3^L = {lambda_3_L:.6f}\")\n",
+    "        print(f\"  Eigengap ratio (lambda_3 / lambda_2): {eigengap_ratio:.3f}\")\n",
+    "        if eigengap_ratio > 2.0:\n",
+    "            print(f\"    -> LARGE eigengap: 1D nested hierarchy (lambda_3 >> lambda_2)\")\n",
+    "        elif eigengap_ratio > 1.5:\n",
+    "            print(f\"    -> Moderate eigengap: weak multi-scale structure\")\n",
+    "        else:\n",
+    "            print(f\"    -> SMALL eigengap: multi-dimensional/community structure\")\n",
+    "        print(f\"  Top 3 eigenvalues (T): {eigvals_T[:3] if len(eigvals_T) >= 3 else eigvals_T}\")\n",
+    "    else:\n",
+    "        print(f\"  Eigengap: N/A\")"\n",
     "    \n",
     "    print(f\"\\nECI-Fitness Correlation:\")\n",
     "    print(f\"  Pearson r = {r:.3f}, p = {p:.3e}\")\n",
