Update nested_matrix_fitness_complexity notebook to use scikit-learn interface
Replace deprecated functional API calls:
- compute_eci_pci() -> ECI().fit_transform()
- fitness_complexity() -> FitnessComplexity().fit_transform()

All notebooks now use the scikit-learn class-based API.

--- a/examples/nested_matrix_fitness_complexity.ipynb
+++ b/examples/nested_matrix_fitness_complexity.ipynb
@@ -543,9 +543,12 @@
     "    \n",
     "    M_comm = sp.csr_matrix(np.array(M_comm_data))\n",
     "    \n",
-    "    # Compute ECI and Fitness\n",
-    "    eci_comm, _ = compute_eci_pci(M_comm)\n",
-    "    F_comm, Q_comm, _ = fitness_complexity(M_comm)\n",
+    "    # Compute ECI and Fitness (using scikit-learn interface)\n",
+    "    eci_model = ECI()\n",
+    "    eci_comm, _ = eci_model.fit_transform(M_comm)\n",
+    "    \n",
+    "    fc = FitnessComplexity(verbose=False)\n",
+    "    F_comm, Q_comm = fc.fit_transform(M_comm)\n",
     "    \n",
     "    # Compute correlations\n",
     "    div_comm = np.asarray(M_comm.sum(axis=1)).ravel()\n",
