Update atlas_fitness_comparison.ipynb for product names
- Updated product comparison table to show product names
- Added new cell displaying products DataFrame structure with names
- Widened table layout to accommodate product name column
- Product names make analysis output much more interpretable

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -31,9 +31,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "EorJtW2zqwzD"
       },
+      "outputs": [],
       "source": [
         "import sys\n",
         "import subprocess\n",
@@ -74,15 +76,15 @@
         "import fitkit\n",
         "\n",
         "print(\"fitkit version:\", getattr(fitkit, \"__version__\", \"unknown\"))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "nXEXlbTuqkpX"
       },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -97,9 +99,7 @@
         "sns.set_style('whitegrid')\n",
         "plt.rcParams['figure.figsize'] = (12, 8)\n",
         "plt.rcParams['font.size'] = 10"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -114,24 +114,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "zoh0eYM1qkpY"
       },
+      "outputs": [],
       "source": [
         "# Check available years\n",
         "years = list_atlas_available_years('hs92')\n",
         "print(f\"Atlas HS92 data available for {len(years)} years\")\n",
         "print(f\"Range: {min(years)} - {max(years)}\")\n",
         "print(f\"\\nYears: {years}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "KkLdMUnIqkpY"
       },
+      "outputs": [],
       "source": [
         "# Load data for 2000 and 2020 at 4-digit product level\n",
         "print(\"Loading 2000 data...\")\n",
@@ -160,9 +162,38 @@
         "print(f\"\\n2020: {M_2020.shape[0]} countries × {M_2020.shape[1]} products\")\n",
         "print(f\"      Density: {M_2020.nnz / (M_2020.shape[0] * M_2020.shape[1]):.4f}\")\n",
         "print(f\"      Non-zero entries: {M_2020.nnz:,}\")"
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Display loaded data structure (with product names!)\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"LOADED DATA STRUCTURE\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
+        "print(\"\\nCountries DataFrame:\")\n",
+        "print(countries_2020.head())\n",
+        "print(f\"\\nTotal countries: {len(countries_2020)}\")\n",
+        "\n",
+        "print(\"\\nProducts DataFrame (now includes product names!):\")\n",
+        "print(products_2020.head(15))\n",
+        "print(f\"\\nTotal products: {len(products_2020)}\")\n",
+        "\n",
+        "print(\"\\nSample product names:\")\n",
+        "for code in ['0101', '2709', '8703', '8517', '3004', '9018']:\n",
+        "    match = products_2020[products_2020['product'] == code]\n",
+        "    if not match.empty:\n",
+        "        print(f\"  {code}: {match['product_name'].values[0]}\")\n",
+        "\n",
+        "print(\"\\nRCA Matrix:\")\n",
+        "print(f\"  Shape: {M_2020.shape}\")\n",
+        "print(f\"  Density: {M_2020.nnz / (M_2020.shape[0] * M_2020.shape[1]):.4f}\")\n",
+        "print(f\"  Non-zero entries: {M_2020.nnz:,}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -177,9 +208,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "dzl2pLAZqkpY"
       },
+      "outputs": [],
       "source": [
         "# Compute fitness-complexity for 2000\n",
         "print(\"Computing fitness-complexity for 2000...\")\n",
@@ -192,28 +225,28 @@
         "fc_2020 = FitnessComplexity()\n",
         "F_2020, Q_2020 = fc_2020.fit_transform(M_2020)\n",
         "print(f\"  Converged: {fc_2020.converged_}, iterations: {fc_2020.n_iter_}\")\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xA3wsQOssOVm"
       },
+      "outputs": [],
       "source": [
         "# Show convergence info\n",
         "print(f\"2000: converged={fc_2000.converged_}, n_iter={fc_2000.n_iter_}\")\n",
         "print(f\"2020: converged={fc_2020.converged_}, n_iter={fc_2020.n_iter_}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "hZ2eYujnqkpY"
       },
+      "outputs": [],
       "source": [
         "# Plot fitness distributions\n",
         "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n",
@@ -243,9 +276,7 @@
         "print(f\"2000: {fc_2000.n_iter_} iterations (converged: {fc_2000.converged_})\")\n",
         "print(f\"2020: {fc_2020.n_iter_} iterations (converged: {fc_2020.converged_})\")\n",
         "print(f\"{'='*60}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -260,9 +291,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "G-CJpfZ6qkpZ"
       },
+      "outputs": [],
       "source": [
         "# Add fitness to dataframes\n",
         "countries_2000['fitness'] = F_2000\n",
@@ -306,9 +339,7 @@
         "    f2020 = f\"{row['fitness_2020']:.4f}\" if pd.notna(row['fitness_2020']) else '-'\n",
         "\n",
         "    print(f\"{row['country']:<10} {r2000:>10} {f2000:>15} {r2020:>10} {f2020:>15}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -323,9 +354,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "hzu10Y_DqkpZ"
       },
+      "outputs": [],
       "source": [
         "# Merge data for countries present in both years\n",
         "comparison = countries_2000[['country', 'fitness', 'rank_2000']].merge(\n",
@@ -365,9 +398,7 @@
         "for _, row in losers.iterrows():\n",
         "    print(f\"{row['country']:<10} {row['fitness_2000']:>12.4f} {row['fitness_2020']:>12.4f} \"\n",
         "          f\"{row['fitness_change']:>+15.4f} {row['rank_change']:>+12.0f}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -382,9 +413,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "CN-3FGUtqkpZ"
       },
+      "outputs": [],
       "source": [
         "# Create scatter plot with color-coded changes\n",
         "fig, ax = plt.subplots(figsize=(12, 10))\n",
@@ -441,9 +474,7 @@
         "print(f\"\\nCorrelation between 2000 and 2020 fitness:\")\n",
         "print(f\"  Pearson r = {r_pearson:.3f} (p < {p_pearson:.1e})\")\n",
         "print(f\"  Spearman ρ = {r_spearman:.3f} (p < {p_spearman:.1e})\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -458,9 +489,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "f57AVlxtqkpZ"
       },
+      "outputs": [],
       "source": [
         "# Add complexity to product dataframes\n",
         "products_2000['complexity'] = Q_2000\n",
@@ -471,9 +504,9 @@
         "products_2020 = products_2020.sort_values('complexity', ascending=False).reset_index(drop=True)\n",
         "products_2020['rank_2020'] = products_2020.index + 1\n",
         "\n",
-        "# Merge for comparison\n",
+        "# Merge for comparison (include product_name from 2020)\n",
         "product_comparison = products_2000[['product', 'complexity', 'rank_2000']].merge(\n",
-        "    products_2020[['product', 'complexity', 'rank_2020']],\n",
+        "    products_2020[['product', 'product_name', 'complexity', 'rank_2020']],\n",
         "    on='product',\n",
         "    how='inner',\n",
         "    suffixes=('_2000', '_2020')\n",
@@ -481,26 +514,28 @@
         "\n",
         "product_comparison['complexity_change'] = product_comparison['complexity_2020'] - product_comparison['complexity_2000']\n",
         "\n",
-        "print(\"=\"*60)\n",
+        "print(\"=\"*85)\n",
         "print(\"TOP 15 MOST COMPLEX PRODUCTS (2020)\")\n",
-        "print(\"=\"*60)\n",
-        "print(\"\\n{:<12} {:>15} {:>15} {:>15}\".format(\n",
-        "    'Product', 'Complex. 2000', 'Complex. 2020', 'Change'\n",
+        "print(\"=\"*85)\n",
+        "print(\"\\n{:<8} {:<32} {:>12} {:>12} {:>12}\".format(\n",
+        "    'Code', 'Product Name', 'Comp. 2000', 'Comp. 2020', 'Change'\n",
         "))\n",
-        "print(\"-\"*60)\n",
+        "print(\"-\"*85)\n",
         "\n",
         "for _, row in product_comparison.nlargest(15, 'complexity_2020').iterrows():\n",
-        "    print(f\"{row['product']:<12} {row['complexity_2000']:>15.4f} \"\n",
-        "          f\"{row['complexity_2020']:>15.4f} {row['complexity_change']:>+15.4f}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "    name = row['product_name'][:30]  # Truncate long names\n",
+        "    print(f\"{row['product']:<8} {name:<32} \"\n",
+        "          f\"{row['complexity_2000']:>12.4f} {row['complexity_2020']:>12.4f} \"\n",
+        "          f\"{row['complexity_change']:>+12.4f}\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "VlB2za2aqkpa"
       },
+      "outputs": [],
       "source": [
         "# Plot product complexity distributions\n",
         "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
@@ -547,9 +582,7 @@
         "\n",
         "plt.tight_layout()\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -564,9 +597,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "MY591ejOqkpa"
       },
+      "outputs": [],
       "source": [
         "# Compute diversification (number of products per country)\n",
         "div_2000 = M_2000.sum(axis=1).A1\n",
@@ -631,9 +666,7 @@
         "print(f\"\\nCorrelation between diversification and fitness:\")\n",
         "print(f\"  2000: Spearman ρ = {r_2000:.3f} (p < {p_2000:.1e})\")\n",
         "print(f\"  2020: Spearman ρ = {r_2020:.3f} (p < {p_2020:.1e})\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -648,9 +681,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "6J7nycAOqkpa"
       },
+      "outputs": [],
       "source": [
         "print(\"=\"*70)\n",
         "print(\"SUMMARY OF CHANGES (2000-2020)\")\n",
@@ -678,9 +713,7 @@
         "print(f\"  Products less complex: {(product_comparison['complexity_change'] < 0).sum():>18}\")\n",
         "\n",
         "print(\"\\n\" + \"=\"*70)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -693,7 +726,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Load GDP per capita and Human Capital Index data\n",
         "print(\"Loading GDP per capita data...\")\n",
@@ -723,13 +758,13 @@
         "\n",
         "print(f\"\\n{len(comparison_gdp)} countries with both fitness and GDP per capita data\")\n",
         "print(f\"{len(comparison_hci)} countries with both fitness and HCI data\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Create scatter plots with country code labels\n",
         "fig, axes = plt.subplots(1, 2, figsize=(18, 8))\n",
@@ -849,13 +884,13 @@
         "print(f\"  N = {len(comparison_hci_clean)} countries\")\n",
         "\n",
         "print(f\"\\n{'='*70}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Identify interesting countries (outliers and extremes)\n",
         "\n",
@@ -885,9 +920,7 @@
         "    print(f\"{row['country']:<10} Fitness: {row['fitness']:>8.4f}  GDP/capita: ${row['gdp_per_capita']:>12,.0f}\")\n",
         "\n",
         "print(\"\\n\" + \"=\"*70)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
