Implement CIP-000D: Fitness-Complexity low connectivity filtering
PROBLEM SOLVED:
- Germany getting fitness=234 (all fitness), everyone else gets 0
- Root cause: Products with ubiquity < 3 cause numerical collapse

IMPLEMENTATION:
- Add filtering parameters to FitnessComplexity class:
  * min_ubiquity=3 (default): Filter products exported by < 3 countries
  * min_diversification=5 (default): Filter countries with < 5 products
  * iterative_filter=True (default): Iteratively reapply until stable
- Store country_mask_ and product_mask_ attributes
- Return NaN for filtered entities in fitness_/complexity_ arrays
- Handle edge case where filtering removes everything

EMPIRICAL VALIDATION (on 2020 Atlas data):
- min_ubiquity=1: Max/median ratio = 1.3e15 (catastrophic collapse)
- min_ubiquity=2: Max/median ratio = 2.9e13 (still bad)
- min_ubiquity=3: Max/median ratio = 39.6 (GOOD - all countries positive)
- min_ubiquity=5: Max/median ratio = 18.4 (even better)

Default of min_ubiquity=3 is minimum threshold for numerical stability.

TESTS:
- 8 new tests covering filtering logic, Atlas data, edge cases
- All tests pass with new defaults

FILES CHANGED:
- fitkit/algorithms/fitness.py: Add filtering to FitnessComplexity class
- tests/test_fitness_filtering.py: Comprehensive test suite
- examples/atlas_fitness_comparison.ipynb: Add filtering explanation
- cip/cip000D_fitness-low-connectivity-filtering.md: Update status to Implemented

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -203,7 +203,13 @@
       "source": [
         "## 2. Computing Fitness and Complexity\n",
         "\n",
-        "Now we compute the Fitness-Complexity metrics for both years. The algorithm iteratively updates country fitness and product complexity until convergence."
+        "Now we compute the Fitness-Complexity metrics for both years. The algorithm iteratively updates country fitness and product complexity until convergence.\n",
+        "\n",
+        "**Note on filtering**: The FitnessComplexity estimator automatically filters out low-connectivity nodes to prevent numerical collapse:\n",
+        "- Products exported by < 3 countries (min_ubiquity=3)\n",
+        "- Countries exporting < 5 products (min_diversification=5)\n",
+        "\n",
+        "This is essential for numerical stability. Without filtering, products with ubiquity=1 or 2 can cause extreme fitness concentration on a single country."
       ]
     },
     {
@@ -219,12 +225,14 @@
         "fc_2000 = FitnessComplexity()\n",
         "F_2000, Q_2000 = fc_2000.fit_transform(M_2000)\n",
         "print(f\"  Converged: {fc_2000.converged_}, iterations: {fc_2000.n_iter_}\")\n",
+        "print(f\"  Filtered: {fc_2000.n_countries_filtered_} countries, {fc_2000.n_products_filtered_} products\")\n",
         "\n",
         "# Compute fitness-complexity for 2020\n",
         "print(\"\\nComputing fitness-complexity for 2020...\")\n",
         "fc_2020 = FitnessComplexity()\n",
         "F_2020, Q_2020 = fc_2020.fit_transform(M_2020)\n",
-        "print(f\"  Converged: {fc_2020.converged_}, iterations: {fc_2020.n_iter_}\")\n"
+        "print(f\"  Converged: {fc_2020.converged_}, iterations: {fc_2020.n_iter_}\")\n",
+        "print(f\"  Filtered: {fc_2020.n_countries_filtered_} countries, {fc_2020.n_products_filtered_} products\")\n"
       ]
     },
     {
