Clarify that graph disconnection is the root cause of fitness collapse
User feedback: The problem is not just 'low ubiquity' but fundamentally about
graph connectivity. Low ubiquity/diversification filtering is a heuristic that
helps ensure connectivity, but the underlying issue is disconnected components.

CHANGES:
- CIP-000D: Emphasize disconnected components as root cause
- CIP-000D: Explain that isolated subgraphs violate connectivity assumption
- FitnessComplexity docstring: Lead with connectivity requirement
- FitnessComplexity params: Explain how low ubiquity creates isolated subgraphs
- atlas notebook: Explain connectivity assumption and disconnection mechanism

The filtering thresholds (min_ubiquity=3, min_diversification=5) are heuristics
that prevent common patterns of disconnection, not fundamental mathematical
requirements.

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -205,11 +205,13 @@
         "\n",
         "Now we compute the Fitness-Complexity metrics for both years. The algorithm iteratively updates country fitness and product complexity until convergence.\n",
         "\n",
-        "**Note on filtering**: The FitnessComplexity estimator automatically filters out low-connectivity nodes to prevent numerical collapse:\n",
+        "**Note on filtering**: The Fitness-Complexity algorithm mathematically requires the bipartite graph (countries ↔ products) to be **connected**. Disconnected components or isolated subgraphs violate this assumption, causing numerical collapse where one component dominates.\n",
+        "\n",
+        "The FitnessComplexity estimator automatically filters low-connectivity nodes:\n",
         "- Products exported by < 3 countries (min_ubiquity=3)\n",
         "- Countries exporting < 5 products (min_diversification=5)\n",
         "\n",
-        "This is essential for numerical stability. Without filtering, products with ubiquity=1 or 2 can cause extreme fitness concentration on a single country."
+        "This heuristic prevents the most common cause of disconnection: products with ubiquity=1-2 create isolated 2-node subgraphs (country ↔ product). Without filtering, these can cause extreme fitness concentration on a single country."
       ]
     },
     {
