--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -90,6 +90,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import plotly.express as px\n",
         "from scipy.stats import spearmanr, pearsonr\n",
         "\n",
         "from fitkit import load_atlas_trade, list_atlas_available_years, load_gdp_per_capita, load_human_capital_index\n",
@@ -418,7 +419,9 @@
       "source": [
         "## 5. Visualization: Fitness Scatter Plot\n",
         "\n",
-        "Let's create a scatter plot showing fitness in 2000 vs 2020, with countries colored by their change in fitness."
+        "Let's create an interactive scatter plot showing fitness in 2000 vs 2020, with countries colored by their change in fitness.\n",
+        "\n",
+        "**Note**: This plot uses Plotly for interactivity - hover over any point to see the country name and values."
       ]
     },
     {
@@ -429,57 +432,39 @@
       },
       "outputs": [],
       "source": [
-        "# Create scatter plot with color-coded changes\n",
-        "fig, ax = plt.subplots(figsize=(12, 10))\n",
+        "# Create interactive scatter plot with Plotly (hover shows country names)\n",
+        "# Compute correlation\n",
+        "r_pearson, p_pearson = pearsonr(comparison['fitness_2000'], comparison['fitness_2020'])\n",
+        "r_spearman, p_spearman = spearmanr(comparison['fitness_2000'], comparison['fitness_2020'])\n",
         "\n",
-        "# Plot all countries\n",
-        "scatter = ax.scatter(\n",
-        "    comparison['fitness_2000'],\n",
-        "    comparison['fitness_2020'],\n",
-        "    c=comparison['fitness_change'],\n",
-        "    cmap='RdYlGn',\n",
-        "    s=100,\n",
-        "    alpha=0.6,\n",
-        "    edgecolors='black',\n",
-        "    linewidth=0.5\n",
+        "fig = px.scatter(\n",
+        "    comparison,\n",
+        "    x='fitness_2000',\n",
+        "    y='fitness_2020',\n",
+        "    hover_name=comparison.index,\n",
+        "    color='fitness_change',\n",
+        "    color_continuous_scale='RdYlGn',\n",
+        "    hover_data={'fitness_2000': ':.3f', 'fitness_2020': ':.3f', 'fitness_change': ':.3f'},\n",
+        "    labels={\n",
+        "        'fitness_2000': 'Economic Fitness 2000',\n",
+        "        'fitness_2020': 'Economic Fitness 2020',\n",
+        "        'fitness_change': 'Fitness Change'\n",
+        "    },\n",
+        "    title=f'Economic Fitness: 2000 vs 2020<br><sub>Pearson r = {r_pearson:.3f}, Spearman ρ = {r_spearman:.3f}, p < {p_pearson:.1e}</sub>'\n",
         ")\n",
         "\n",
         "# Add diagonal line (no change)\n",
         "max_val = max(comparison['fitness_2000'].max(), comparison['fitness_2020'].max())\n",
-        "ax.plot([0, max_val], [0, max_val], 'k--', alpha=0.3, linewidth=1, label='No change')\n",
+        "fig.add_shape(\n",
+        "    type='line',\n",
+        "    x0=0, y0=0, x1=max_val, y1=max_val,\n",
+        "    line=dict(color='black', width=1, dash='dash'),\n",
+        "    opacity=0.3\n",
+        ")\n",
         "\n",
-        "# Label top gainers and losers\n",
-        "top_movers = pd.concat([\n",
-        "    comparison.nlargest(5, 'fitness_change'),\n",
-        "    comparison.nsmallest(5, 'fitness_change')\n",
-        "])\n",
-        "\n",
-        "for _, row in top_movers.iterrows():\n",
-        "    ax.annotate(\n",
-        "        row['country'],\n",
-        "        (row['fitness_2000'], row['fitness_2020']),\n",
-        "        xytext=(5, 5),\n",
-        "        textcoords='offset points',\n",
-        "        fontsize=9,\n",
-        "        bbox=dict(boxstyle='round,pad=0.3', facecolor='white', edgecolor='gray', alpha=0.7)\n",
-        "    )\n",
-        "\n",
-        "ax.set_xlabel('Economic Fitness 2000', fontsize=12)\n",
-        "ax.set_ylabel('Economic Fitness 2020', fontsize=12)\n",
-        "ax.set_title('Economic Fitness: 2000 vs 2020\\n(Countries above diagonal improved, below declined)', fontsize=14)\n",
-        "ax.legend()\n",
-        "ax.grid(True, alpha=0.3)\n",
-        "\n",
-        "# Add colorbar\n",
-        "cbar = plt.colorbar(scatter, ax=ax)\n",
-        "cbar.set_label('Fitness Change (2020 - 2000)', fontsize=11)\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n",
-        "# Compute correlation\n",
-        "r_pearson, p_pearson = pearsonr(comparison['fitness_2000'], comparison['fitness_2020'])\n",
-        "r_spearman, p_spearman = spearmanr(comparison['fitness_2000'], comparison['fitness_2020'])\n",
+        "fig.update_traces(marker=dict(size=8, opacity=0.7, line=dict(width=0.5, color='DarkSlateGray')))\n",
+        "fig.update_layout(height=600, template='plotly_white')\n",
+        "fig.show()\n",
         "\n",
         "print(f\"\\nCorrelation between 2000 and 2020 fitness:\")\n",
         "print(f\"  Pearson r = {r_pearson:.3f} (p < {p_pearson:.1e})\")\n",
@@ -602,7 +587,9 @@
       "source": [
         "## 7. Diversification Analysis\n",
         "\n",
-        "Let's examine how product diversification (number of products exported) relates to economic fitness."
+        "Let's examine how product diversification (number of products exported) relates to economic fitness.\n",
+        "\n",
+        "**Note**: These plots use Plotly for interactivity - hover over any point to see the country name and values."
       ]
     },
     {
@@ -621,59 +608,50 @@
         "comparison['diversification_2020'] = div_2020[comparison.index]\n",
         "comparison['div_change'] = comparison['diversification_2020'] - comparison['diversification_2000']\n",
         "\n",
-        "# Plot diversification vs fitness\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
-        "\n",
-        "# 2000\n",
-        "axes[0].scatter(\n",
-        "    comparison['diversification_2000'],\n",
-        "    comparison['fitness_2000'],\n",
-        "    alpha=0.6,\n",
-        "    s=80,\n",
-        "    edgecolors='black',\n",
-        "    linewidth=0.5\n",
-        ")\n",
-        "axes[0].set_xlabel('Number of Products Exported', fontsize=12)\n",
-        "axes[0].set_ylabel('Economic Fitness', fontsize=12)\n",
-        "axes[0].set_title('Diversification vs Fitness (2000)', fontsize=13)\n",
-        "axes[0].grid(True, alpha=0.3)\n",
-        "\n",
-        "# Add trend line\n",
-        "z = np.polyfit(comparison['diversification_2000'], comparison['fitness_2000'], 1)\n",
-        "p = np.poly1d(z)\n",
-        "x_line = np.linspace(comparison['diversification_2000'].min(), comparison['diversification_2000'].max(), 100)\n",
-        "axes[0].plot(x_line, p(x_line), 'r--', alpha=0.5, linewidth=2, label=f'Linear fit')\n",
-        "axes[0].legend()\n",
-        "\n",
-        "# 2020\n",
-        "axes[1].scatter(\n",
-        "    comparison['diversification_2020'],\n",
-        "    comparison['fitness_2020'],\n",
-        "    alpha=0.6,\n",
-        "    s=80,\n",
-        "    edgecolors='black',\n",
-        "    linewidth=0.5\n",
-        ")\n",
-        "axes[1].set_xlabel('Number of Products Exported', fontsize=12)\n",
-        "axes[1].set_ylabel('Economic Fitness', fontsize=12)\n",
-        "axes[1].set_title('Diversification vs Fitness (2020)', fontsize=13)\n",
-        "axes[1].grid(True, alpha=0.3)\n",
-        "\n",
-        "# Add trend line\n",
-        "z = np.polyfit(comparison['diversification_2020'], comparison['fitness_2020'], 1)\n",
-        "p = np.poly1d(z)\n",
-        "x_line = np.linspace(comparison['diversification_2020'].min(), comparison['diversification_2020'].max(), 100)\n",
-        "axes[1].plot(x_line, p(x_line), 'r--', alpha=0.5, linewidth=2, label=f'Linear fit')\n",
-        "axes[1].legend()\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n",
+        "# Plot fitness vs diversification (with hover showing country names)\n",
         "# Compute correlations\n",
-        "r_2000, p_2000 = spearmanr(comparison['diversification_2000'], comparison['fitness_2000'])\n",
-        "r_2020, p_2020 = spearmanr(comparison['diversification_2020'], comparison['fitness_2020'])\n",
+        "r_2000, p_2000 = spearmanr(comparison['fitness_2000'], comparison['diversification_2000'])\n",
+        "r_2020, p_2020 = spearmanr(comparison['fitness_2020'], comparison['diversification_2020'])\n",
         "\n",
-        "print(f\"\\nCorrelation between diversification and fitness:\")\n",
+        "# 2000 plot\n",
+        "fig1 = px.scatter(\n",
+        "    comparison,\n",
+        "    x='fitness_2000',\n",
+        "    y='diversification_2000',\n",
+        "    hover_name=comparison.index,\n",
+        "    hover_data={'fitness_2000': ':.2f', 'diversification_2000': ':.0f'},\n",
+        "    labels={\n",
+        "        'fitness_2000': 'Economic Fitness',\n",
+        "        'diversification_2000': 'Number of Products Exported'\n",
+        "    },\n",
+        "    title=f'Number of Products vs Fitness (2000)<br><sub>Spearman ρ = {r_2000:.3f}, p < {p_2000:.1e}</sub>',\n",
+        "    trendline='ols',\n",
+        "    trendline_color_override='red'\n",
+        ")\n",
+        "fig1.update_traces(marker=dict(size=8, opacity=0.6, line=dict(width=1, color='DarkSlateGray')))\n",
+        "fig1.update_layout(height=450, template='plotly_white')\n",
+        "fig1.show()\n",
+        "\n",
+        "# 2020 plot\n",
+        "fig2 = px.scatter(\n",
+        "    comparison,\n",
+        "    x='fitness_2020',\n",
+        "    y='diversification_2020',\n",
+        "    hover_name=comparison.index,\n",
+        "    hover_data={'fitness_2020': ':.2f', 'diversification_2020': ':.0f'},\n",
+        "    labels={\n",
+        "        'fitness_2020': 'Economic Fitness',\n",
+        "        'diversification_2020': 'Number of Products Exported'\n",
+        "    },\n",
+        "    title=f'Number of Products vs Fitness (2020)<br><sub>Spearman ρ = {r_2020:.3f}, p < {p_2020:.1e}</sub>',\n",
+        "    trendline='ols',\n",
+        "    trendline_color_override='red'\n",
+        ")\n",
+        "fig2.update_traces(marker=dict(size=8, opacity=0.6, line=dict(width=1, color='DarkSlateGray')))\n",
+        "fig2.update_layout(height=450, template='plotly_white')\n",
+        "fig2.show()\n",
+        "\n",
+        "print(f\"\\nCorrelation between fitness and diversification:\")\n",
         "print(f\"  2000: Spearman ρ = {r_2000:.3f} (p < {p_2000:.1e})\")\n",
         "print(f\"  2020: Spearman ρ = {r_2020:.3f} (p < {p_2020:.1e})\")"
       ]
@@ -731,7 +709,9 @@
       "source": [
         "## 10. Fitness vs Economic Indicators\n",
         "\n",
-        "Let's examine how economic fitness relates to traditional economic metrics like GDP per capita and the Human Capital Index (HCI)."
+        "Let's examine how economic fitness relates to traditional economic metrics like GDP per capita and the Human Capital Index (HCI).\n",
+        "\n",
+        "**Note**: These plots use Plotly for interactivity - hover over any point to see the country name and values."
       ]
     },
     {
@@ -776,119 +756,74 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Create scatter plots with country code labels\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(18, 8))\n",
+        "# Create interactive scatter plots with Plotly (hover shows country names)\n",
+        "# Remove any zero or negative values for log scale\n",
+        "comparison_gdp_clean = comparison_gdp[(comparison_gdp['fitness'] > 0) & (comparison_gdp['gdp_per_capita'] > 0)].copy()\n",
+        "comparison_hci_clean = comparison_hci[(comparison_hci['fitness'] > 0) & (comparison_hci['hci'] > 0)].copy()\n",
+        "\n",
+        "# Add log columns for plotting\n",
+        "comparison_gdp_clean['log_fitness'] = np.log10(comparison_gdp_clean['fitness'])\n",
+        "comparison_gdp_clean['log_gdp'] = np.log10(comparison_gdp_clean['gdp_per_capita'])\n",
+        "comparison_hci_clean['log_fitness'] = np.log10(comparison_hci_clean['fitness'])\n",
+        "comparison_hci_clean['log_hci'] = np.log10(comparison_hci_clean['hci'])\n",
         "\n",
         "# === Plot 1: log Fitness vs log GDP per Capita ===\n",
-        "ax1 = axes[0]\n",
-        "\n",
-        "# Remove any zero or negative values for log scale\n",
-        "comparison_gdp_clean = comparison_gdp[(comparison_gdp['fitness'] > 0) & (comparison_gdp['gdp_per_capita'] > 0)]\n",
-        "\n",
-        "log_fitness = np.log10(comparison_gdp_clean['fitness'])\n",
-        "log_gdp = np.log10(comparison_gdp_clean['gdp_per_capita'])\n",
-        "\n",
-        "# Scatter plot\n",
-        "ax1.scatter(\n",
-        "    log_gdp,\n",
-        "    log_fitness,\n",
-        "    s=100,\n",
-        "    alpha=0.6,\n",
-        "    edgecolors='black',\n",
-        "    linewidth=0.5,\n",
-        "    c='steelblue'\n",
-        ")\n",
-        "\n",
-        "# Add country code labels to all points\n",
-        "for _, row in comparison_gdp_clean.iterrows():\n",
-        "    ax1.annotate(\n",
-        "        row['country'],\n",
-        "        (np.log10(row['gdp_per_capita']), np.log10(row['fitness'])),\n",
-        "        fontsize=7,\n",
-        "        alpha=0.7,\n",
-        "        ha='center',\n",
-        "        va='bottom'\n",
-        "    )\n",
-        "\n",
-        "# Add trend line\n",
-        "z = np.polyfit(log_gdp, log_fitness, 1)\n",
-        "p = np.poly1d(z)\n",
-        "x_line = np.linspace(log_gdp.min(), log_gdp.max(), 100)\n",
-        "ax1.plot(x_line, p(x_line), 'r--', alpha=0.5, linewidth=2, label=f'Linear fit (R² = {np.corrcoef(log_gdp, log_fitness)[0,1]**2:.3f})')\n",
-        "\n",
-        "ax1.set_xlabel('log₁₀(GDP per Capita) [current US$]', fontsize=12)\n",
-        "ax1.set_ylabel('log₁₀(Economic Fitness)', fontsize=12)\n",
-        "ax1.set_title('Economic Fitness vs GDP per Capita (2020)', fontsize=14, fontweight='bold')\n",
-        "ax1.legend(loc='upper left', fontsize=10)\n",
-        "ax1.grid(True, alpha=0.3)\n",
-        "\n",
         "# Compute correlation\n",
-        "r_gdp, p_gdp = pearsonr(log_gdp, log_fitness)\n",
-        "ax1.text(0.05, 0.95, f'Pearson r = {r_gdp:.3f}\\np < {p_gdp:.1e}', \n",
-        "         transform=ax1.transAxes, fontsize=10, verticalalignment='top',\n",
-        "         bbox=dict(boxstyle='round', facecolor='white', alpha=0.8))\n",
+        "r_gdp, p_gdp = pearsonr(comparison_gdp_clean['log_fitness'], comparison_gdp_clean['log_gdp'])\n",
+        "\n",
+        "fig1 = px.scatter(\n",
+        "    comparison_gdp_clean,\n",
+        "    x='log_fitness',\n",
+        "    y='log_gdp',\n",
+        "    hover_name='country',\n",
+        "    hover_data={'log_fitness': ':.3f', 'log_gdp': ':.3f', 'fitness': ':.2f', 'gdp_per_capita': ':.0f'},\n",
+        "    labels={\n",
+        "        'log_fitness': 'log₁₀(Economic Fitness)',\n",
+        "        'log_gdp': 'log₁₀(GDP per Capita)',\n",
+        "        'fitness': 'Fitness',\n",
+        "        'gdp_per_capita': 'GDP per Capita'\n",
+        "    },\n",
+        "    title=f'log₁₀(GDP per Capita) vs log₁₀(Fitness) (2020)<br><sub>Pearson r = {r_gdp:.3f}, p < {p_gdp:.1e}, N = {len(comparison_gdp_clean)}</sub>',\n",
+        "    trendline='ols',\n",
+        "    trendline_color_override='red'\n",
+        ")\n",
+        "fig1.update_traces(marker=dict(size=10, opacity=0.7, line=dict(width=1, color='DarkSlateGray')))\n",
+        "fig1.update_layout(height=500, template='plotly_white')\n",
+        "fig1.show()\n",
         "\n",
         "# === Plot 2: log Fitness vs log HCI ===\n",
-        "ax2 = axes[1]\n",
-        "\n",
-        "# Remove any zero or negative values for log scale\n",
-        "comparison_hci_clean = comparison_hci[(comparison_hci['fitness'] > 0) & (comparison_hci['hci'] > 0)]\n",
-        "\n",
-        "log_fitness_hci = np.log10(comparison_hci_clean['fitness'])\n",
-        "log_hci = np.log10(comparison_hci_clean['hci'])\n",
-        "\n",
-        "# Scatter plot\n",
-        "ax2.scatter(\n",
-        "    log_hci,\n",
-        "    log_fitness_hci,\n",
-        "    s=100,\n",
-        "    alpha=0.6,\n",
-        "    edgecolors='black',\n",
-        "    linewidth=0.5,\n",
-        "    c='coral'\n",
-        ")\n",
-        "\n",
-        "# Add country code labels to all points\n",
-        "for _, row in comparison_hci_clean.iterrows():\n",
-        "    ax2.annotate(\n",
-        "        row['country'],\n",
-        "        (np.log10(row['hci']), np.log10(row['fitness'])),\n",
-        "        fontsize=7,\n",
-        "        alpha=0.7,\n",
-        "        ha='center',\n",
-        "        va='bottom'\n",
-        "    )\n",
-        "\n",
-        "# Add trend line\n",
-        "z = np.polyfit(log_hci, log_fitness_hci, 1)\n",
-        "p = np.poly1d(z)\n",
-        "x_line = np.linspace(log_hci.min(), log_hci.max(), 100)\n",
-        "ax2.plot(x_line, p(x_line), 'r--', alpha=0.5, linewidth=2, label=f'Linear fit (R² = {np.corrcoef(log_hci, log_fitness_hci)[0,1]**2:.3f})')\n",
-        "\n",
-        "ax2.set_xlabel('log₁₀(Human Capital Index)', fontsize=12)\n",
-        "ax2.set_ylabel('log₁₀(Economic Fitness)', fontsize=12)\n",
-        "ax2.set_title('Economic Fitness vs Human Capital Index (2020)', fontsize=14, fontweight='bold')\n",
-        "ax2.legend(loc='upper left', fontsize=10)\n",
-        "ax2.grid(True, alpha=0.3)\n",
-        "\n",
         "# Compute correlation\n",
-        "r_hci, p_hci = pearsonr(log_hci, log_fitness_hci)\n",
-        "ax2.text(0.05, 0.95, f'Pearson r = {r_hci:.3f}\\np < {p_hci:.1e}', \n",
-        "         transform=ax2.transAxes, fontsize=10, verticalalignment='top',\n",
-        "         bbox=dict(boxstyle='round', facecolor='white', alpha=0.8))\n",
+        "r_hci, p_hci = pearsonr(comparison_hci_clean['log_fitness'], comparison_hci_clean['log_hci'])\n",
         "\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n",
+        "fig2 = px.scatter(\n",
+        "    comparison_hci_clean,\n",
+        "    x='log_fitness',\n",
+        "    y='log_hci',\n",
+        "    hover_name='country',\n",
+        "    hover_data={'log_fitness': ':.3f', 'log_hci': ':.3f', 'fitness': ':.2f', 'hci': ':.3f'},\n",
+        "    labels={\n",
+        "        'log_fitness': 'log₁₀(Economic Fitness)',\n",
+        "        'log_hci': 'log₁₀(Human Capital Index)',\n",
+        "        'fitness': 'Fitness',\n",
+        "        'hci': 'HCI'\n",
+        "    },\n",
+        "    title=f'log₁₀(Human Capital Index) vs log₁₀(Fitness) (2020)<br><sub>Pearson r = {r_hci:.3f}, p < {p_hci:.1e}, N = {len(comparison_hci_clean)}</sub>',\n",
+        "    trendline='ols',\n",
+        "    trendline_color_override='red'\n",
+        ")\n",
+        "fig2.update_traces(marker=dict(size=10, opacity=0.7, line=dict(width=1, color='DarkSlateGray')))\n",
+        "fig2.update_layout(height=500, template='plotly_white')\n",
+        "fig2.show()\n",
         "\n",
         "print(f\"\\n{'='*70}\")\n",
         "print(\"CORRELATION ANALYSIS\")\n",
         "print(f\"{'='*70}\")\n",
-        "print(f\"\\nlog(Fitness) vs log(GDP per Capita):\")\n",
+        "print(f\"\\nlog(GDP per Capita) vs log(Fitness):\")\n",
         "print(f\"  Pearson r = {r_gdp:.4f} (p < {p_gdp:.1e})\")\n",
         "print(f\"  R² = {r_gdp**2:.4f}\")\n",
         "print(f\"  N = {len(comparison_gdp_clean)} countries\")\n",
         "\n",
-        "print(f\"\\nlog(Fitness) vs log(HCI):\")\n",
+        "print(f\"\\nlog(HCI) vs log(Fitness):\")\n",
         "print(f\"  Pearson r = {r_hci:.4f} (p < {p_hci:.1e})\")\n",
         "print(f\"  R² = {r_hci**2:.4f}\")\n",
         "print(f\"  N = {len(comparison_hci_clean)} countries\")\n",
