Add load_country_names() utility function and use in notebook
CHANGES:
- Add load_country_names() function to datasets.py:
  * Downloads country name mapping from World Bank API
  * Caches locally to ~/.fitkit/data/world_bank/country_names.json
  * Returns dict of ISO3 code -> full country name (247 countries)
  * Excludes regional/income aggregates
- Export load_country_names from fitkit/__init__.py
- Update atlas_fitness_comparison.ipynb:
  * Replace manual 80-country dict with load_country_names()
  * Now has all 247 countries instead of just common ones
  * Automatic fallback to ISO3 code if name not found

BENEFITS:
- Reusable across all notebooks/scripts
- No manual maintenance of country name mappings
- Complete coverage of all countries in World Bank database
- Cached after first download (~50KB, <1 second)

User request: Extract country names automatically with reusable function

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -95,7 +95,7 @@
         "import plotly.graph_objects as go\n",
         "from scipy.stats import spearmanr, pearsonr\n",
         "\n",
-        "from fitkit import load_atlas_trade, list_atlas_available_years, load_gdp_per_capita, load_human_capital_index\n",
+        "from fitkit import load_atlas_trade, list_atlas_available_years, load_gdp_per_capita, load_human_capital_index, load_country_names\n",
         "from fitkit.algorithms import FitnessComplexity\n",
         "\n",
         "# Set plotting style\n",
@@ -775,28 +775,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Create country name mapping (ISO3 -> Full name)\n",
-        "# Using a comprehensive mapping for common countries in Atlas data\n",
-        "country_names = {\n",
-        "    'USA': 'United States', 'CHN': 'China', 'JPN': 'Japan', 'DEU': 'Germany', 'GBR': 'United Kingdom',\n",
-        "    'FRA': 'France', 'IND': 'India', 'ITA': 'Italy', 'BRA': 'Brazil', 'CAN': 'Canada',\n",
-        "    'KOR': 'South Korea', 'RUS': 'Russia', 'ESP': 'Spain', 'AUS': 'Australia', 'MEX': 'Mexico',\n",
-        "    'IDN': 'Indonesia', 'NLD': 'Netherlands', 'SAU': 'Saudi Arabia', 'TUR': 'Turkey', 'CHE': 'Switzerland',\n",
-        "    'POL': 'Poland', 'BEL': 'Belgium', 'SWE': 'Sweden', 'ARG': 'Argentina', 'NOR': 'Norway',\n",
-        "    'AUT': 'Austria', 'ARE': 'United Arab Emirates', 'IRN': 'Iran', 'THA': 'Thailand', 'NGA': 'Nigeria',\n",
-        "    'EGY': 'Egypt', 'ISR': 'Israel', 'DNK': 'Denmark', 'SGP': 'Singapore', 'MYS': 'Malaysia',\n",
-        "    'HKG': 'Hong Kong', 'IRL': 'Ireland', 'PHL': 'Philippines', 'PAK': 'Pakistan', 'CHL': 'Chile',\n",
-        "    'FIN': 'Finland', 'COL': 'Colombia', 'ZAF': 'South Africa', 'BGD': 'Bangladesh', 'VNM': 'Vietnam',\n",
-        "    'CZE': 'Czech Republic', 'PRT': 'Portugal', 'PER': 'Peru', 'GRC': 'Greece', 'NZL': 'New Zealand',\n",
-        "    'QAT': 'Qatar', 'ROU': 'Romania', 'IRQ': 'Iraq', 'DZA': 'Algeria', 'HUN': 'Hungary',\n",
-        "    'KWT': 'Kuwait', 'UKR': 'Ukraine', 'MAR': 'Morocco', 'ECU': 'Ecuador', 'SVK': 'Slovakia',\n",
-        "    'KEN': 'Kenya', 'ETH': 'Ethiopia', 'DOM': 'Dominican Republic', 'GTM': 'Guatemala', 'OMN': 'Oman',\n",
-        "    'LUX': 'Luxembourg', 'PAN': 'Panama', 'URY': 'Uruguay', 'BGR': 'Bulgaria', 'CRI': 'Costa Rica',\n",
-        "    'LTU': 'Lithuania', 'HRV': 'Croatia', 'SVN': 'Slovenia', 'TZA': 'Tanzania', 'LBN': 'Lebanon',\n",
-        "    'SRB': 'Serbia', 'GHA': 'Ghana', 'UZB': 'Uzbekistan', 'TUN': 'Tunisia', 'LVA': 'Latvia',\n",
-        "    'CIV': 'Ivory Coast', 'EST': 'Estonia', 'JOR': 'Jordan', 'BHR': 'Bahrain', 'CMR': 'Cameroon',\n",
-        "    'PRY': 'Paraguay', 'BOL': 'Bolivia', 'TTO': 'Trinidad and Tobago', 'UGA': 'Uganda', 'LKA': 'Sri Lanka'\n",
-        "}\n",
+        "# Load country name mapping (ISO3 -> Full name) from World Bank\n",
+        "print(\"Loading country names...\")\n",
+        "country_names = load_country_names()\n",
+        "print(f\"  Loaded {len(country_names)} country names\")\n",
         "\n",
         "# Load GDP per capita and Human Capital Index data\n",
         "print(\"Loading GDP per capita data...\")\n",
