Fix NameError: Move country_names loading to early in notebook
FIX:
- Move country_names = load_country_names() to right after trade data loading
- Remove duplicate loading from GDP/HCI section
- Now country_names is available for all cells that need it

ISSUE:
- Section 4 (Fitness Changes Over Time) tried to use country_names before it was defined
- country_names was previously loaded in Section 10 (GDP/HCI analysis)
- Caused NameError when running cells out of order or from top

User feedback: NameError on line using country_names in section 4

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -164,7 +164,12 @@
         "\n",
         "print(f\"\\n2020: {M_2020.shape[0]} countries × {M_2020.shape[1]} products\")\n",
         "print(f\"      Density: {M_2020.nnz / (M_2020.shape[0] * M_2020.shape[1]):.4f}\")\n",
-        "print(f\"      Non-zero entries: {M_2020.nnz:,}\")"
+        "print(f\"      Non-zero entries: {M_2020.nnz:,}\")\n",
+        "\n",
+        "# Load country name mapping (ISO3 -> Full name) for visualization\n",
+        "print(\"\\nLoading country names for visualization...\")\n",
+        "country_names = load_country_names()\n",
+        "print(f\"  Loaded {len(country_names)} country names\")"
       ]
     },
     {
@@ -775,11 +780,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load country name mapping (ISO3 -> Full name) from World Bank\n",
-        "print(\"Loading country names...\")\n",
-        "country_names = load_country_names()\n",
-        "print(f\"  Loaded {len(country_names)} country names\")\n",
-        "\n",
         "# Load GDP per capita and Human Capital Index data\n",
         "print(\"Loading GDP per capita data...\")\n",
         "gdp_df = load_gdp_per_capita(start_year=2020, end_year=2020)\n",
