Fix country_name mapping in atlas_fitness_comparison
Two critical bugs fixed:
1. comparison.index.map(country_names) was wrong - after merge, index is
   numeric (0, 1, 2...), not country codes. Changed to comparison['country'].map()
2. comparison.index used for diversification lookup was wrong - need matrix
   positions. Fixed by including 'idx' column in merge and using idx_2000/idx_2020.

Changes:
- Include 'idx' column in merge to preserve matrix positions
- Use comparison['country'] instead of comparison.index for name mapping
- Use comparison['idx_2000']/['idx_2020'] for diversification array indexing
- Use comparison['country'] in hover tooltips instead of comparison.index
- Remove duplicate country_name assignment in diversification section

Tested with Python conversion script - all sections now work correctly.

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -378,9 +378,9 @@
       },
       "outputs": [],
       "source": [
-        "# Merge data for countries present in both years\n",
-        "comparison = countries_2000[['country', 'fitness', 'rank_2000']].merge(\n",
-        "    countries_2020[['country', 'fitness', 'rank_2020']],\n",
+        "# Merge data for countries present in both years (include idx for later diversification lookup)\n",
+        "comparison = countries_2000[['country', 'idx', 'fitness', 'rank_2000']].merge(\n",
+        "    countries_2020[['country', 'idx', 'fitness', 'rank_2020']],\n",
         "    on='country',\n",
         "    how='inner',\n",
         "    suffixes=('_2000', '_2020')\n",
@@ -389,7 +389,7 @@
         "comparison['fitness_change'] = comparison['fitness_2020'] - comparison['fitness_2000']\n",
         "comparison['fitness_pct_change'] = 100 * (comparison['fitness_2020'] / comparison['fitness_2000'] - 1)\n",
         "comparison['rank_change'] = comparison['rank_2000'] - comparison['rank_2020']  # Positive = improved\n",
-        "comparison['country_name'] = comparison.index.map(country_names).fillna(comparison.index)\n",
+        "comparison['country_name'] = comparison['country'].map(country_names).fillna(comparison['country'])\n",
         "\n",
         "print(f\"\\nAnalyzing {len(comparison)} countries present in both years\\n\")\n",
         "\n",
@@ -619,10 +619,10 @@
         "div_2000 = M_2000.sum(axis=1).A1\n",
         "div_2020 = M_2020.sum(axis=1).A1\n",
         "\n",
-        "comparison['diversification_2000'] = div_2000[comparison.index]\n",
-        "comparison['diversification_2020'] = div_2020[comparison.index]\n",
+        "comparison['diversification_2000'] = div_2000[comparison['idx_2000']]\n",
+        "comparison['diversification_2020'] = div_2020[comparison['idx_2020']]\n",
         "comparison['div_change'] = comparison['diversification_2020'] - comparison['diversification_2000']\n",
-        "comparison['country_name'] = comparison.index.map(country_names).fillna(comparison.index)\n",
+        "# country_name already added in Section 4, no need to add again\n",
         "\n",
         "# Compute correlations\n",
         "r_2000, p_2000 = spearmanr(comparison['fitness_2000'], comparison['diversification_2000'])\n",
@@ -646,7 +646,7 @@
         "        mode='markers',\n",
         "        marker=dict(size=8, opacity=0.7, color='steelblue', line=dict(width=0.5, color='DarkSlateGray')),\n",
         "        text=comparison['country_name'],\n",
-        "        customdata=np.column_stack((comparison.index, comparison['fitness_2000'], comparison['diversification_2000'])),\n",
+        "        customdata=np.column_stack((comparison['country'], comparison['fitness_2000'], comparison['diversification_2000'])),\n",
         "        hovertemplate='<b>%{text}</b> (%{customdata[0]})<br>' +\n",
         "                      'Fitness: %{customdata[1]:.2f}<br>' +\n",
         "                      '# Products: %{customdata[2]:.0f}<extra></extra>',\n",
@@ -678,7 +678,7 @@
         "        mode='markers',\n",
         "        marker=dict(size=8, opacity=0.7, color='coral', line=dict(width=0.5, color='DarkSlateGray')),\n",
         "        text=comparison['country_name'],\n",
-        "        customdata=np.column_stack((comparison.index, comparison['fitness_2020'], comparison['diversification_2020'])),\n",
+        "        customdata=np.column_stack((comparison['country'], comparison['fitness_2020'], comparison['diversification_2020'])),\n",
         "        hovertemplate='<b>%{text}</b> (%{customdata[0]})<br>' +\n",
         "                      'Fitness: %{customdata[1]:.2f}<br>' +\n",
         "                      '# Products: %{customdata[2]:.0f}<extra></extra>',\n",
