Fix custom_data in fitness 2000 vs 2020 scatter plot
Use comparison['country'] instead of comparison.index for custom data.
The index is numeric (0, 1, 2...) after the merge, not country codes.
This ensures the hover tooltip shows the ISO3 country code correctly.

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -453,7 +453,7 @@
         "    color='fitness_change',\n",
         "    color_continuous_scale='RdYlGn',\n",
         "    hover_data={'fitness_2000': ':.3f', 'fitness_2020': ':.3f', 'fitness_change': ':.3f', 'country_name': False},\n",
-        "    custom_data=[comparison.index],\n",
+        "    custom_data=[comparison['country']],\n",
         "    labels={\n",
         "        'fitness_2000': 'Economic Fitness 2000',\n",
         "        'fitness_2020': 'Economic Fitness 2020',\n",
